# hc_taildep

./: .gitignore  README.md  fix_F9_bootstrap_hist.patch  fix_make_paper.patch  fix_make_paper_j4_bootstrap.patch  fix_make_paper_j4_bootstrap_list.patch  patch_add_m1_regime_sizes_fallback.patch  patch_add_stress_driver_fx.patch  patch_m1_regime_sizes_fallback.patch  pyproject.toml
configs/copulas/: btceth_j5_gating.yaml  btceth_j6_ms.yaml  btceth_j6_ms_4h_gold.yaml  btceth_j6_ms_gold.yaml  btceth_j6_ms_gold_clip1e12.yaml  btceth_j6_ms_gold_stress085.yaml  btceth_j6_ms_gold_stress090.yaml  btceth_j6_ms_gold_stress095.yaml  btceth_j6_ms_gold_uclip1e-12.yaml  btceth_j6_ms_gold_uclip1e-8.yaml  btceth_j6_ms_mineffT120.yaml  btceth_j6_ms_mineffT150.yaml  btceth_j6_ms_mineffT200.yaml  btceth_j6_ms_refit10.yaml  btceth_j6_ms_refit20.yaml  btceth_j6_ms_refit40.yaml  btceth_static.yaml
configs/datasets/: btceth_daily.yaml
configs/pit/: btceth_4h_pit.yaml  (+1 more)
paper/: LOCK.md  __init__.py  hash_manifest_stable.py  make_paper.py  make_paper.py.bak  make_paper2.py  paper_spec.yaml
tests/: test_bootstrap.py  test_copula_logpdf.py  test_dataset_integrity.py  test_determinism_static.py  test_dm_test.py  test_gating.py  test_gumbel_sampling.py  test_gumbel_tail_dependence.py  test_j5_determinism.py  test_j6_runner_deterministic.py  test_j7_sampling.py  test_j7_var_es.py  test_j8_copula_sampling.py  test_j8_copulas.py  test_j8_empirical.py  test_j8_var_es.py  test_j8_var_es_basic.py  test_markov_em_monotone_ll.py  test_markov_filtering.py  test_oos_slicing_static.py  test_pit_ecdf.py
(+50 files in other folders)
